fix: move index.ipynb into notebooks folder

--- a/notebooks/index.ipynb
+++ b/notebooks/index.ipynb
@@ -42,14 +42,14 @@
     "### 1. Using Python and SQLAlchemy\n",
     "- **Notebook:** `nyc_trip/raw_trino_python.ipynb`\n",
     "- **Description:** A full workflow using Python, SQLAlchemy, and Pandas to connect to Trino, query the NYC Yellow Taxi dataset, and build visualizations with Altair.\n",
-    "- ➡️ **Open:** [NYC Taxi Analysis — Python Version](./notebooks/nyc_trip/raw_trino_python.ipynb)\n",
+    "- ➡️ **Open:** [NYC Taxi Analysis — Python Version](./nyc_trip/raw_trino_python.ipynb)\n",
     "\n",
     "\n",
     "### 2. Using SQL\n",
     "- **Notebook:** `nyc_trip/raw_trino_sql.ipynb`\n",
     "- **Description:**\n",
     "- An identical notebook using [JupySQL](https://github.com/ploomber/jupysql) (`%sql`, `%%sql`) to run SQL queries directly against Trino, while still leveraging Pandas and Altair for analysis.\n",
-    "- ➡️ **Open:** [NYC Taxi Analysis — SQL Magic Version](./notebooks/nyc_trip/raw_trino_sql.ipynb)\n",
+    "- ➡️ **Open:** [NYC Taxi Analysis — SQL Magic Version](./nyc_trip/raw_trino_sql.ipynb)\n",
     "\n",
     "---\n",
     "\n",
