feat: add PySpark example

--- a/notebooks/index.ipynb
+++ b/notebooks/index.ipynb
@@ -13,43 +13,50 @@
     "These notebooks cover a wide range of topics, including:\n",
     "\n",
     "- Data exploration and sampling strategies  \n",
-    "- Trino SQL queries and performance checks  \n",
+    "- PySpark and Trino SQL queries\n",
     "- Python data workflows with Pandas and Altair  \n",
     "- Interactive analytics and visualization  \n",
     "- End-to-end demonstrations of OKDP capabilities  \n",
     "\n",
-    "Among these resources, you will also find examples of two complementary approaches to interacting with Trino:\n",
+    "Among these resources, you will also find examples of complementary approaches to analyzing data with different engines:\n",
     "\n",
-    "- **Python + SQLAlchemy workflows**  \n",
-    "- **SQL Magic (`%sql`, `%%sql`) workflows**  \n",
-    "\n",
+    "- **Trino via Python + SQLAlchemy workflows**  \n",
+    "- **Trino via SQL Magic (`%sql`, `%%sql`) workflows**  \n",
+    "- **Apache Spark via PySpark workflows** \n",
+    "    \n",
     "But the project is **not limited to these two approaches** — more notebooks, tests, and examples will appear as the workspace grows.\n",
     "\n",
     "Use this hub as your starting point to navigate the notebook ecosystem and explore OKDP in a sandbox environment.\n",
     "\n",
     "---\n",
     "\n",
-    "## Trino-Backed Analysis Notebooks\n",
+    "## Trino/PySpark Backed Analysis Notebooks\n",
     "\n",
-    "The following notebooks analyze the NYC Yellow Taxi dataset **using Trino as the compute engine**, focusing on:\n",
+    "The following notebooks analyze the NYC Yellow Taxi dataset **using Trino and Apache Spark as the compute engines**, focusing on:\n",
     "\n",
-    "- Random sampling strategies executed directly on Trino  \n",
-    "- Time-based feature engineering powered by Trino SQL functions  \n",
-    "- Interactive Altair visualizations built on top of Trino query results  \n",
-    "- Data quality checks performed over Trino-managed tables  \n",
-    "- Explorations of distance, fare, and passenger behavior using Trino-backed datasets  \n",
+    "- Random sampling strategies \n",
+    "- Time-based feature engineering\n",
+    "- Interactive Altair visualizations built on top of query results  \n",
+    "- Data quality checks\n",
+    "- Explorations of distance, fare, and passenger behavior using Trino and spark datasets  \n",
     "\n",
-    "### 1. Using Python and SQLAlchemy\n",
+    "### 1. Trino - Using Python and SQLAlchemy\n",
     "- **Notebook:** `nyc_trip/raw_trino_python.ipynb`\n",
     "- **Description:** A full workflow using Python, SQLAlchemy, and Pandas to connect to Trino, query the NYC Yellow Taxi dataset, and build visualizations with Altair.\n",
     "- ➡️ **Open:** [NYC Taxi Analysis — Python Version](./nyc_trip/raw_trino_python.ipynb)\n",
     "\n",
     "\n",
-    "### 2. Using SQL\n",
+    "### 2. Trino - Using SQL\n",
     "- **Notebook:** `nyc_trip/raw_trino_sql.ipynb`\n",
     "- **Description:**\n",
     "- An identical notebook using [JupySQL](https://github.com/ploomber/jupysql) (`%sql`, `%%sql`) to run SQL queries directly against Trino, while still leveraging Pandas and Altair for analysis.\n",
     "- ➡️ **Open:** [NYC Taxi Analysis — SQL Magic Version](./nyc_trip/raw_trino_sql.ipynb)\n",
+    "\n",
+    "\n",
+    "### 3. PySpark - NYC Yellow Taxi Data Analysis with Spark (PySpark)\n",
+    "- **Notebook:** `nyc_trip/raw_pyspark.ipynb`\n",
+    "- **Description:** A full workflow using PySpark to analyze the NYC Yellow Taxi dataset with Spark as the compute engine.\n",
+    "- ➡️ **Open:** [NYC Yellow Taxi Data Analysis — Spark (PySpark)](./nyc_trip/raw_pyspark.ipynb)\n",
     "\n",
     "---\n",
     "\n",
@@ -83,7 +90,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.12"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
