fix: switch MinIO endpoint to SeaweedFS

--- a/notebooks/nyc_trip/raw_pyspark.ipynb
+++ b/notebooks/nyc_trip/raw_pyspark.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# 🧭 NYC Yellow Taxi Data Analysis with Spark (PySpark)\n",
     "\n",
-    "This notebook reads the **NYC Yellow Taxi dataset** directly from **MinIO/S3 (s3a://)** in **Parquet** format and performs sampling + EDA with **Spark**.\n",
+    "This notebook reads the **NYC Yellow Taxi dataset** directly from **SeaweedFS/S3 (s3a://)** in **Parquet** format and performs sampling + EDA with **Spark**.\n",
     "\n",
     "Dataset path used:\n",
     "- `s3a://okdp/examples/data/raw/tripdata/yellow/`\n"
@@ -21,10 +21,10 @@
     "## 📘 Notebook Documentation (README)\n",
     "\n",
     "### What this notebook does\n",
-    "This notebook demonstrates a practical Spark-based EDA workflow on the NYC Yellow Taxi dataset stored in **Parquet** on **S3-compatible storage (MinIO)**.\n",
+    "This notebook demonstrates a practical Spark-based EDA workflow on the NYC Yellow Taxi dataset stored in **Parquet** on **S3-compatible storage (SeaweedFS)**.\n",
     "\n",
     "You will:\n",
-    "- Configure Spark to access MinIO via `s3a://`\n",
+    "- Configure Spark to access SeaweedFS via `s3a://`\n",
     "- Load Parquet into a Spark DataFrame\n",
     "- Inspect schema with both DataFrame and SQL approaches\n",
     "- Build a **balanced per-day random sample** (to reduce temporal skew)\n",
@@ -85,10 +85,10 @@
    "source": [
     "## 🛠️ 2. Initialize Spark Session\n",
     "\n",
-    "This SparkSession is configured for **MinIO/S3A** access:\n",
-    "- `spark.hadoop.fs.s3a.endpoint`: MinIO endpoint URL\n",
+    "This SparkSession is configured for **SeaweedFS/S3A** access:\n",
+    "- `spark.hadoop.fs.s3a.endpoint`: SeaweedFS endpoint URL\n",
     "- `SimpleAWSCredentialsProvider`: uses explicit access/secret key values\n",
-    "- `path.style.access=true`: important for many MinIO setups\n",
+    "- `path.style.access=true`: important for many SeaweedFS setups\n",
     "\n",
     "If you move to production, you typically:\n",
     "- use IAM roles / workload identity instead of static keys\n"
@@ -112,7 +112,7 @@
     "    .config(\"spark.executor.memory\", \"2000M\")\n",
     "    .config(\"spark.executor.cores\", \"2\")\n",
     "    .config(\"spark.executor.instances\", \"1\")\n",
-    "    .config(\"spark.hadoop.fs.s3a.endpoint\", \"https://minio-default.okdp.sandbox:443\")\n",
+    "    .config(\"spark.hadoop.fs.s3a.endpoint\", \"https://seaweedfs-seaweedfs-default.okdp.sandbox:443\")\n",
     "    .config(\"spark.hadoop.fs.s3a.access.key\", s3AccessKey)\n",
     "    .config(\"spark.hadoop.fs.s3a.secret.key\", s3SecretKey)\n",
     "    .config(\"spark.hadoop.fs.s3a.aws.credentials.provider\", \"org.apache.hadoop.fs.s3a.SimpleAWSCredentialsProvider\")\n",
@@ -587,7 +587,7 @@
    "source": [
     "## 🧹 14. Stop Spark session\n",
     "\n",
-    "Stop the Spark session to free CPU/memory and release any open connections (e.g., to S3/MinIO)"
+    "Stop the Spark session to free CPU/memory and release any open connections (e.g., to S3/SeaweedFS)"
    ]
   },
   {
